<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <DUT Name="EtherCAT_Offline_Config" Id="{7be7ae17-c03f-403e-9157-b069a6f94a1e}">
    <Declaration><![CDATA[TYPE
    EtherCAT_Offline_Config : ARRAY[1..GVL.MaxNumOfSlaves] OF ST_EcSlaveConfigData;
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>